--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "dependencies": {
-    "memory-fs": "~0.4.1",
+    "node-memory-fs": "github:penyuying/node-memory-fs",
     "mime": "^1.3.4",
     "path-is-absolute": "^1.0.0",
     "range-parser": "^1.0.3"
